--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 	   
 				</div>
 			</div>
+
 		</section>
-	
         <!-- Footer-->
         <footer class="py-3 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
@@ -261,8 +261,11 @@
 					Total: $<span id="total_price">100</span>
 				  </div>
 				  <div class="text-center"> 
-					<a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
+					<a href="checkout.html"  class="btn btn-primary m-3">Checkout</a>
 					<a href="javascript:void(0)" onclick="cleanCart()" class="btn btn-primary m-3">Clean Cart</a>
+					<a href="javascript:void(0)" onclick="generateCart()" class="btn btn-primary m-3">Total List</a>
+					<!-- <button onclick="generateCart()">totalList</button> -->
+					
 				  </div>
 			  </div>
 			</div>
