--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 						  <th scope="row">Cooking oil</th>
 						  <td>$10.5</td>
 						  <td>2</td>
-						  <td>$21</td>
+						  <td >$21</td>
 						</tr>
 						<tr>
 						  <th scope="row">Pasta</th>
@@ -264,7 +264,7 @@
 					<a href="checkout.html"  class="btn btn-primary m-3">Checkout</a>
 					<a href="javascript:void(0)" onclick="cleanCart()" class="btn btn-primary m-3">Clean Cart</a>
 					<a href="javascript:void(0)" onclick="generateCart()" class="btn btn-primary m-3">Total List</a>
-					<!-- <button onclick="generateCart()">totalList</button> -->
+					 <!--<button onclick="applyPromotionsCart()">promo</button>-->
 					
 				  </div>
 			  </div>
