--- a/checkout.html
+++ b/checkout.html
@@ -80,41 +80,41 @@
 		<form class="form">
 			<div class="row bord p-5 shadow m-5">
 				<div class="col-sm-6">
-					<div class="mt-3">
+					<div class="mt-3" id="grupo__fName">
 						<label for="fName" class="form-label">First Name:</label>
-						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name" />
+						<input id="fName" class="form-control ml-3" name="fName" type="text" placeholder="First Name" />
 						<div id="errorName" class="invalid-feedback">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
-					<div class="mt-3 ">
+					<div class="mt-3 " id="grupo__fEmail">
 						<label for="fEmail" class="form-label">Email:</label>
-						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" />
+						<input id="fEmail" class="form-control ml-3" name="fEmail" type="email" placeholder="Email" minlength="3" />
 						<div id="errorEmail" class="invalid-feedback">This field is required and must contain an '@' and have, at
 							least, 3 characters</div>
 					</div>
-					<div class="mt-3 ">
+					<div class="mt-3 " id="grupo__fAdress">
 						<label for="fAddress" class="form-label">Address:</label>
-						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" />
+						<input id="fAddress" class="form-control" name="fAdress" type="text" placeholder="Address" minlength="3" />
 						<div id="errorAddress" class="invalid-feedback">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-6">
-					<div class="mt-3">
+					<div class="mt-3" id="grupo__fLastN">
 						<label for="fLastN" class="form-label">Last Name:</label>
-						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" />
+						<input id="fLastN" class="form-control" name="fLastN" type="text" placeholder="Last Name" minlength="3" />
 						<div id="errorLastN" class="invalid-feedback">This field is required and must have, at least, 3 characters
 						</div>
 					</div>
-					<div class="mt-3">
+					<div class="mt-3" id="grupo__fPassword">
 						<label for="fPassword" class="form-label">Password:</label>
-						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password" minlength="4"
+						<input id="fPassword" class="form-control" name="fPassword" title="(4-8 characters)" type="password" minlength="4"
 							maxlength="8" placeholder="Password" />
 						<div id="errorPassword" class="invalid-feedback">Enter a correct password</div>
 					</div>
-					<div class="mt-3">
+					<div class="mt-3" id="grupo__fPhone">
 						<label for="fPhone" class="form-label">Phone Number:</label>
-						<input id="fPhone" class="form-control" type="number" placeholder="Phone No." />
+						<input id="fPhone" class="form-control" name="fPhone" type="number" placeholder="Phone No." />
 						<div id="errorPhone" class="invalid-feedback">Invalid phone number!! Must be 9 digits with no letters</div>
 					</div>
 				</div>
@@ -166,7 +166,6 @@
 		crossorigin="anonymous"></script>
 
 	<!-- Core theme JS-->
-	<script src="js/products.js"></script>
 	<script src="js/shop.js"></script>
 	<script src="js/checkout.js"></script>
 </body>
